# WebPad360

./: .gitignore  CMakeLists.txt  README.md  index_html.c  main.c  pico_sdk_import.cmake  tusb_config.h  xinput.h
config/: lwipopts.h
web/: index.html
xinput/: XInputDescriptors.h  xinput_descriptors.c  xinput_driver.c  xinput_driver.h
